--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "static/OpenXR-SDK"]
-	path = static/OpenXR-SDK
+[submodule "sys/OpenXR-SDK"]
+	path = sys/OpenXR-SDK
 	url = https://github.com/KhronosGroup/OpenXR-SDK.git
