--- a/sys/Cargo.toml
+++ b/sys/Cargo.toml
@@ -19,6 +19,7 @@ opengl = []
 xlib = []
 xcb = []
 static = ["cmake", "prototypes"]
+default = ["vulkan", "opengl", "xlib"]
 
 [dependencies]
 ash = { version = "0.27", optional = true }
