--- a/openxr/Cargo.toml
+++ b/openxr/Cargo.toml
@@ -26,3 +26,6 @@ sys = { package = "openxr-sys", path = "../sys", version = "0.1.7", default-feat
 shared_library = { version = "0.1.9", optional = true }
 ash = { version = "0.27", optional = true }
 void = "1"
+
+[package.metadata.docs.rs]
+features = ["linked", "loaded", "vulkan", "opengl", "xlib"]
