--- a/openxr/Cargo.toml
+++ b/openxr/Cargo.toml
@@ -2,6 +2,7 @@
 name = "openxr"
 description = "High-level, mostly-safe OpenXR bindings"
 repository = "https://github.com/Ralith/openxrs"
+readme = "../README.md"
 version = "0.1.0"
 authors = ["Benjamin Saunders <ben.e.saunders@gmail.com>"]
 categories = ["api-bindings", "rendering"]
