--- a/sys/Cargo.toml
+++ b/sys/Cargo.toml
@@ -2,6 +2,7 @@
 name = "openxr-sys"
 description = "OpenXR FFI bindings"
 repository = "https://github.com/Ralith/openxrs"
+readme = "../README.md"
 version = "0.1.7"
 authors = ["Benjamin Saunders <ben.e.saunders@gmail.com>"]
 categories = ["external-ffi-bindings", "rendering"]
