nalgebra convenience impls

--- a/sys/Cargo.toml
+++ b/sys/Cargo.toml
@@ -3,7 +3,7 @@ name = "openxr-sys"
 description = "OpenXR FFI bindings"
 repository = "https://github.com/Ralith/openxrs"
 readme = "../README.md"
-version = "0.2.0"
+version = "0.2.1"
 authors = ["Benjamin Saunders <ben.e.saunders@gmail.com>"]
 categories = ["external-ffi-bindings", "rendering"]
 keywords = ["openxr", "vr"]
@@ -19,6 +19,7 @@ static = ["cmake", "prototypes"]
 
 [dependencies]
 libc = "0.2.50"
+nalgebra = { version = "0.17", optional = true }
 
 [target.'cfg(windows)'.dependencies]
 winapi = { version = "0.3", features = ["windef", "ntdef", "d3dcommon", "d3d11", "d3d12"] }
@@ -27,4 +28,4 @@ winapi = { version = "0.3", features = ["windef", "ntdef", "d3dcommon", "d3d11",
 cmake = { version = "0.1.35", optional = true }
 
 [package.metadata.docs.rs]
-features = ["prototypes"]
+features = ["prototypes", "nalgebra"]
