Document nalgebra feature

--- a/openxr/Cargo.toml
+++ b/openxr/Cargo.toml
@@ -26,4 +26,4 @@ shared_library = { version = "0.1.9", optional = true }
 void = "1"
 
 [package.metadata.docs.rs]
-features = ["linked", "loaded"]
+features = ["linked", "loaded", "nalgebra"]
