--- a/openxr/Cargo.toml
+++ b/openxr/Cargo.toml
@@ -6,7 +6,7 @@ readme = "../README.md"
 version = "0.3.2"
 authors = ["Benjamin Saunders <ben.e.saunders@gmail.com>"]
 categories = ["api-bindings", "rendering"]
-keywords = ["openxr", "vr"]
+keywords = ["vr"]
 license = "MIT/Apache-2.0"
 edition = "2018"
 
