--- a/openxr/Cargo.toml
+++ b/openxr/Cargo.toml
@@ -22,6 +22,7 @@ default = ["loaded"]
 
 [dependencies]
 sys = { package = "openxr-sys", path = "../sys", version = "0.2.0" }
+libc = "0.2.50"
 shared_library = { version = "0.1.9", optional = true }
 void = "1"
 
