Build on Windows. Support calling Instance::now() with win32 extensions.

--- a/openxr/Cargo.toml
+++ b/openxr/Cargo.toml
@@ -26,6 +26,9 @@ libc = "0.2.50"
 shared_library = { version = "0.1.9", optional = true }
 void = "1"
 
+[target.'cfg(windows)'.dependencies]
+winapi = { version = "0.3", features = [] }
+
 [dev-dependencies]
 glium = { version = "0.24.0", default-features = false }
 x11 = { version = "2.18.1", features = ["xlib", "glx"] }
