Don't try to apt-get on macOS in CI

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -4,7 +4,7 @@ stages:
      minrust: 1.36.0
      setup:
        - script: sudo apt-get -y install libxxf86vm-dev libxrandr-dev pkg-config
-         condition: not(eq(variables['Agent.OS'], 'Windows_NT'))
+         condition: eq(variables['Agent.OS'], 'Linux')
 
 resources:
   repositories:
