--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "sys/OpenXR-SDK-Source"]
-	path = sys/OpenXR-SDK-Source
-	url = https://github.com/KhronosGroup/OpenXR-SDK-Source.git
+[submodule "sys/OpenXR-SDK"]
+	path = sys/OpenXR-SDK
+	url = https://github.com/KhronosGroup/OpenXR-SDK.git
