Mint support, version bump

--- a/openxr/Cargo.toml
+++ b/openxr/Cargo.toml
@@ -3,7 +3,7 @@ name = "openxr"
 description = "High-level, mostly-safe OpenXR bindings"
 repository = "https://github.com/Ralith/openxrs"
 readme = "../README.md"
-version = "0.9.3"
+version = "0.9.4"
 authors = ["Benjamin Saunders <ben.e.saunders@gmail.com>"]
 categories = ["api-bindings", "rendering"]
 keywords = ["vr"]
@@ -18,10 +18,11 @@ static = ["sys/static", "linked"]
 loaded = ["shared_library"]
 linked = ["sys/prototypes"]
 nalgebra = ["sys/nalgebra"]
+mint = ["sys/mint"]
 default = ["loaded"]
 
 [dependencies]
-sys = { package = "openxr-sys", path = "../sys", version = "0.6.5" }
+sys = { package = "openxr-sys", path = "../sys", version = "0.6.6" }
 libc = "0.2.50"
 shared_library = { version = "0.1.9", optional = true }
 
@@ -33,4 +34,4 @@ glium = { version = "0.24.0", default-features = false }
 x11 = { version = "2.18.1", features = ["xlib", "glx"] }
 
 [package.metadata.docs.rs]
-features = ["linked", "loaded", "nalgebra"]
+features = ["linked", "loaded", "nalgebra", "mint"]
