--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -3,7 +3,7 @@ stages:
    parameters:
      minrust: 1.36.0
      setup:
-       - script: sudo apt-get -y install libxxf86vm-dev libxrandr-dev pkg-config
+       - script: sudo apt-get -y install libxxf86vm-dev libxrandr-dev libgl1-mesa-dev pkg-config
          condition: eq(variables['Agent.OS'], 'Linux')
 
 resources:
