--- a/openxr/Cargo.toml
+++ b/openxr/Cargo.toml
@@ -3,7 +3,7 @@ name = "openxr"
 description = "High-level, mostly-safe OpenXR bindings"
 repository = "https://github.com/Ralith/openxrs"
 readme = "../README.md"
-version = "0.7.0"
+version = "0.10.0"
 authors = ["Benjamin Saunders <ben.e.saunders@gmail.com>"]
 categories = ["api-bindings", "rendering"]
 keywords = ["vr"]
@@ -17,18 +17,20 @@ maintenance = { status = "experimental" }
 static = ["sys/static", "linked"]
 loaded = ["shared_library"]
 linked = ["sys/prototypes"]
-nalgebra = ["sys/nalgebra"]
+mint = ["sys/mint"]
 default = ["loaded"]
 
 [dependencies]
-sys = { package = "openxr-sys", path = "../sys", version = "0.4.0" }
+sys = { package = "openxr-sys", path = "../sys", version = "0.7.0" }
 libc = "0.2.50"
 shared_library = { version = "0.1.9", optional = true }
-void = "1"
 
-[dev-dependencies]
+[target.'cfg(windows)'.dependencies]
+winapi = { version = "0.3", features = ["profileapi"] }
+
+[target.'cfg(target_os = "linux")'.dev-dependencies]
 glium = { version = "0.24.0", default-features = false }
 x11 = { version = "2.18.1", features = ["xlib", "glx"] }
 
 [package.metadata.docs.rs]
-features = ["linked", "loaded", "nalgebra"]
+features = ["linked", "loaded", "mint"]
