--- a/openxr/Cargo.toml
+++ b/openxr/Cargo.toml
@@ -15,7 +15,7 @@ maintenance = { status = "experimental" }
 
 [features]
 static = ["sys/static", "linked"]
-loaded = ["shared_library"]
+loaded = ["libloading"]
 linked = ["sys/prototypes"]
 mint = ["sys/mint"]
 default = ["loaded"]
@@ -23,7 +23,7 @@ default = ["loaded"]
 [dependencies]
 sys = { package = "openxr-sys", path = "../sys", version = "0.7.2" }
 libc = "0.2.50"
-shared_library = { version = "0.1.9", optional = true }
+libloading = { version = "0.5.2", optional = true }
 
 [target.'cfg(windows)'.dependencies]
 winapi = { version = "0.3", features = ["profileapi"] }
