Build Android on ubuntu in CI

--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -2,7 +2,7 @@ name: CI
 
 on:
   push:
-    branches: ['master']
+    branches: ["master"]
   pull_request:
 
 jobs:
@@ -10,12 +10,22 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-latest, macos-latest, windows-latest]
-        rust: [stable, beta]
-        exclude:
-          - os: macos-latest
+        include:
+          - os: ubuntu-latest
+            rust: stable
+            target: x86_64-unknown-linux-gnu
+          - os: ubuntu-latest
             rust: beta
+            target: x86_64-unknown-linux-gnu
+          - os: ubuntu-latest
+            rust: stable
+            target: aarch64-linux-android
           - os: windows-latest
-            rust: beta
+            rust: stable
+            target: x86_64-pc-windows-msvc
+          - os: macOS-latest
+            rust: stable
+            target: x86_64-apple-darwin
 
     runs-on: ${{ matrix.os }}
 
@@ -28,12 +38,14 @@ jobs:
         with:
           profile: minimal
           toolchain: ${{ matrix.rust }}
+          target: ${{ matrix.target }}
           override: true
       - uses: actions-rs/cargo@v1
         with:
           command: build
-          args: --workspace --all-targets
+          args: --workspace --all-targets --target ${{ matrix.target }}
       - uses: actions-rs/cargo@v1
+        if: ${{ matrix.target }} != 'aarch64-linux-android'
         with:
           command: test
           args: --workspace
