Use cargo-apk to build android

--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -32,6 +32,9 @@ jobs:
       - name: Install foreign dependencies
         if: matrix.os == 'ubuntu-latest'
         run: sudo apt update && sudo apt-get -y install libxxf86vm-dev libxrandr-dev libgl1-mesa-dev
+      - name: Install cargo-apk
+        if: matrix.target == 'aarch64-linux-android'
+        run: cargo install cargo-apk
       - uses: actions/checkout@v1
       - uses: actions-rs/toolchain@v1
         with:
@@ -40,9 +43,15 @@ jobs:
           target: ${{ matrix.target }}
           override: true
       - uses: actions-rs/cargo@v1
+        if: ${{ matrix.target }} != 'aarch64-linux-android
         with:
           command: build
           args: --workspace --all-targets --target ${{ matrix.target }}
+      - uses: actions-rs/cargo@v1
+        if: ${{ matrix.target }} == 'aarch64-linux-android
+        with:
+          command: apk
+          args: build --workspace --all-targets --target ${{ matrix.target }}
       - uses: actions-rs/cargo@v1
         if: ${{ matrix.target }} != 'aarch64-linux-android'
         with:
