--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -43,12 +43,12 @@ jobs:
           target: ${{ matrix.target }}
           override: true
       - uses: actions-rs/cargo@v1
-        if: ${{ matrix.target }} != 'aarch64-linux-android
+        if: ${{ matrix.target }} != 'aarch64-linux-android'
         with:
           command: build
           args: --workspace --all-targets --target ${{ matrix.target }}
       - uses: actions-rs/cargo@v1
-        if: ${{ matrix.target }} == 'aarch64-linux-android
+        if: ${{ matrix.target }} == 'aarch64-linux-android'
         with:
           command: apk
           args: build --workspace --all-targets --target ${{ matrix.target }}
