Out-of-the-box dynamic linking support
This makes it easier to produce idiomatic builds for Linux. Previously
it was intended that downstream code would emit the appropriate cargo
invocation in its build script, but that produces incorrect linker
argument ordering.

--- a/openxr/Cargo.toml
+++ b/openxr/Cargo.toml
@@ -16,7 +16,7 @@ maintenance = { status = "experimental" }
 [features]
 static = ["sys/static", "linked"]
 loaded = ["libloading"]
-linked = ["sys/prototypes"]
+linked = ["sys/linked"]
 mint = ["sys/mint"]
 default = ["loaded"]
 
