--- a/sys/Cargo.toml
+++ b/sys/Cargo.toml
@@ -14,8 +14,8 @@ edition = "2018"
 maintenance = { status = "experimental" }
 
 [features]
-prototypes = []
-static = ["cmake", "prototypes"]
+linked = []
+static = ["cmake", "linked"]
 
 [dependencies]
 libc = "0.2.50"
@@ -31,4 +31,4 @@ jni = "0.19.0"
 cmake = { version = "0.1.35", optional = true }
 
 [package.metadata.docs.rs]
-features = ["prototypes", "mint"]
+features = ["linked", "mint"]
