--- a/sys/Cargo.toml
+++ b/sys/Cargo.toml
@@ -10,6 +10,8 @@ keywords = ["openxr", "vr"]
 license = "MIT/Apache-2.0"
 edition = "2018"
 
+links = "openxr_loader"
+
 [badges]
 maintenance = { status = "experimental" }
 
