--- a/generator/Cargo.toml
+++ b/generator/Cargo.toml
@@ -2,7 +2,7 @@
 name = "generator"
 version = "0.1.0"
 authors = ["Benjamin Saunders <ben.e.saunders@gmail.com>"]
-license = "MIT/Apache-2.0"
+license = "MIT OR Apache-2.0"
 edition = "2024"
 publish = false
 
