--- a/sys/Cargo.toml
+++ b/sys/Cargo.toml
@@ -7,7 +7,7 @@ version = "0.12.0"
 authors = ["Benjamin Saunders <ben.e.saunders@gmail.com>"]
 categories = ["external-ffi-bindings", "rendering"]
 keywords = ["openxr", "vr"]
-license = "MIT/Apache-2.0"
+license = "MIT OR Apache-2.0"
 edition = "2024"
 
 links = "openxr_loader"
